; ModuleID = '/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_free.c'
source_filename = "/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ikcp_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ikcp_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  br i1 true, label %3, label %6

3:                                                ; preds = %1
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @ikcp_free_hook(i8* %4)
  br label %9

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @free(i8* %7)
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i32 @ikcp_free_hook(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
